--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
                 <h1>公告：积读站点 Alpha 测试已经结束，Beta 测试开放时间另行通知。</h1>
                 <p>点击按钮跳转：</p>
                 <div class="row">
-                    <button id="kaygb-blog" class="btn btn-primary col-lg-4">博客</button>
-                    <a href="https://blog.flot.tech" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">博客</a>
+                    <a href="https://blog.flot.tech" target="_blank" class="btn btn-primary col-lg-4">博客</a>
                     <a href="https://index.flot.tech" target="_blank" class="btn btn-secondary col-lg-4">导航</a>
-                    <a href="mailto:flottant1516@gmail.com" target="_blank" id="kaygb-mail-a" class="btn btn-success col-lg-4">邮箱</a>
-                    <button id="kaygb-mail" class="btn btn-success col-lg-4">邮箱</button>
+                    <a href="mailto:flottant1516@gmail.com" target="_blank" class="btn btn-success col-lg-4">邮箱</a>
                 </div>
                 <h4 class="mt-4">或者在这里关注我：</h4>
                 <ul class="social mt-1">
