--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>flottant的主页</title>
     <meta name="description" content="这里是flottant的个人主页，目前站长仍在学习中，每天抽出时间来看书学习，励志成为一个技术很牛的程序员。">
     <meta name="keywords" content="flottant,个人主页,学生">
-    <link rel="icon" type="image/ico" href="//gravatar.loli.net/avatar/4cc893d113dd74ceca73f9863f2c5446/">
+    <link rel="icon" type="image/ico" href="https://cdn.jsdelivr.net/gh/flottant/imgcdn/icon/avatar3ap.webp">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/FortAwesome/Font-Awesome@5.12.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/flottant/cdn@master/home/style.css">
