--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
                     <li><a href="https://t.me/flottant1516"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                     <li><a href="https://twitter.com/flottant233"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 </ul>
+                <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279356622'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279356622%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
+</body>
                 <footer>                  
                     </p>
-                    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279356622'%3E%3C/span%3E%3Cscript src='https://s4.cnzz.com/z_stat.php%3Fid%3D1279356622%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script>
                     </p>
                 </footer>
             </div>
